--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,16 +1,12 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: radiuszon # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Workkami
+    url: http://workkami.com
+  - name: Zon Application
+    url: http://zonapplication.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
