--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,11 +7,15 @@ sites:
     url: http://workkami.com
   - name: Zon Application
     url: http://zonapplication.com
+  - name: GPS Tracker
+    url: http://tracker.ace-energy.co.th
+  - name: Agro Shop
+    url: https://feedstock.saaa.co.th
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  # cname: demo.upptime.js.org
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
