--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,13 +4,21 @@ repo: upptime # The name of this repository
 
 sites:
   - name: Workkami
-    url: http://workkami.com
+    url: https://www.workkami.com
   - name: Zon Application
-    url: http://zonapplication.com
+    url: https://www.zonapplication.com
   - name: GPS Tracker
     url: http://tracker.ace-energy.co.th
   - name: Agro Shop
     url: https://feedstock.saaa.co.th
+  - name: HRIS Dev
+    url: https://hrisdev.ace-energy.co.th
+  - name: The Kaset
+    url: https://www.thekaset.com
+  - name: โรงไฟฟ้าชุมชน
+    url: https://www.โรงไฟฟ้าชุมชน.com
+  - name: ต้นกล้าชัยโย
+    url: https://www.ต้นกล้าชัยโย.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
