--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,10 @@ repo: upptime # The name of this repository
 sites:
   - name: Workkami
     url: https://www.workkami.com
+    icon: https://www.workkami.com/favicon.ico
   - name: Zon Application
     url: https://www.zonapplication.com
+    icon: https://www.zonapplication.com/favicon.ico
   - name: GPS Tracker
     url: http://tracker.ace-energy.co.th
   - name: Agro Shop
