--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,16 +13,14 @@ sites:
     url: http://tracker.ace-energy.co.th/tracker/api/v1/health
   - name: GPS Receiver API
     url: http://tracker.ace-energy.co.th/receiver/api/v1/health
-  - name: Agro Shop
-    url: https://feedstock.saaa.co.th
-  - name: HRIS Dev
-    url: https://hrisdev.ace-energy.co.th
+  - name: Agro Shop API
+    url: https://feedstock.saaa.co.th/api/v1/healthz
   - name: The Kaset
     url: https://www.thekaset.com
   - name: โรงไฟฟ้าชุมชน
-    url: https://www.โรงไฟฟ้าชุมชน.com
+    url: https://www.xn--72cga4d1aapl2lncxf0a1e.com
   - name: ต้นกล้าชัยโย
-    url: https://www.ต้นกล้าชัยโย.com
+    url: https://www.xn--12cs5aq1cas1hh7ntcd.com
 
 
 # status-website:
