--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,16 +11,22 @@ sites:
     icon: https://www.zonapplication.com/favicon.ico
   - name: GPS Tracker API
     url: http://tracker.ace-energy.co.th/tracker/api/v1/health
+    icon: http://tracker.ace-energy.co.th/favicon.ico
   - name: GPS Receiver API
     url: http://tracker.ace-energy.co.th/receiver/api/v1/health
+    icon: http://tracker.ace-energy.co.th/favicon.ico
   - name: Agro Shop API
     url: https://feedstock.saaa.co.th/api/v1/healthz
+    icon: https://feedstock.saaa.co.th/favicon.ico
   - name: The Kaset
     url: https://www.thekaset.com
+    icon: https://www.thekaset.com/favicon.ico
   - name: โรงไฟฟ้าชุมชน
     url: https://www.xn--72cga4d1aapl2lncxf0a1e.com
+    icon: https://www.โรงไฟฟ้าชุมชน.com/favicon.ico
   - name: ต้นกล้าชัยโย
     url: https://www.xn--12cs5aq1cas1hh7ntcd.com
+    icon: https://www.ต้นกล้าชัยโย.com/favicon.ico
 
 
 # status-website:
