--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,12 +11,15 @@ sites:
     icon: https://www.zonapplication.com/favicon.ico
   - name: GPS Tracker API
     url: http://tracker.ace-energy.co.th/tracker/api/v1/health
+    method: GET
     icon: http://tracker.ace-energy.co.th/favicon.ico
   - name: GPS Receiver API
     url: http://tracker.ace-energy.co.th/receiver/api/v1/health
+    method: GET
     icon: http://tracker.ace-energy.co.th/favicon.ico
   - name: Agro Shop API
     url: https://feedstock.saaa.co.th/api/v1/healthz
+    method: GET
     icon: https://feedstock.saaa.co.th/favicon.ico
   - name: The Kaset
     url: https://www.thekaset.com
